--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
     "web scraping"
   ],
   "author": "ryo",
-  "license": "MIT",
-  "dependencies": {
-    "fs": "^16.13.1"
-  }
+  "license": "MIT"
 }
